# dark-matter

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  requirements.txt
.github/workflows/: build-image.yml
cpp/: CMakeLists.txt  Dockerfile  README.md
cpp/src/: main.cpp
java/: .sdkmanrc  Dockerfile  README.md  pom.xml
java/src/main/java/com/darkmatter/: DarkMatterApplication.java
java/src/main/java/com/darkmatter/config/: LoginInterceptor.java  WebConfig.java
java/src/main/java/com/darkmatter/model/: FeatureFlags.java  SystemInfo.java
java/src/main/java/com/darkmatter/service/: LaunchDarklyService.java
java/src/main/resources/: application.properties
java/src/main/resources/templates/: about.html  layout.html  login.html  lower_left.html  lower_right.html  upper_left.html  upper_right.html
java/src/main/resources/templates/fragments/: compass.html  inline-about.html
javascript/: Dockerfile  README.md  package-lock.json  package.json
javascript/src/: server.js
javascript/views/: about.ejs  layout.ejs  login.ejs  lower_left.ejs
javascript/views/partials/: compass.ejs  inline_about.ejs
python/: Dockerfile  README.md  app.py  ld_context_builder.py  requirements.txt
python/scripts/: evaluate_inline_page_load.py
python/templates/: _compass_nav.html  _inline_about.html  about.html  base.html  lower_left.html  upper_left.html  upper_right.html
scripts/: evaluate_inline_page_load.py
templates/: _compass_nav.html  about.html  base.html  login.html  lower_left.html  lower_right.html  upper_left.html  upper_right.html
(+5 files in other folders)
